5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1594_2043.log
== TEST (2019-03-19 15:52:43) 
-- CODE:
round (x, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round (x, 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:53:11) 
-- CODE:
round ("x", 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("x", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:53:44) 
-- CODE:
round ("x", 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("x", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:53:46) 
-- CODE:
round ("x", 2)
-- EXECUTION TIME:
0.163454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 1, in <module>
    round ("x", 2)
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:53:47) 
-- CODE:
round ("x", 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("x", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:54:02) 
-- CODE:
print round ("x", 2)
-- ERROR:
File "XXXX", line 1
    print round ("x", 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:54:09) 
-- CODE:
print 
round ("x", 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round ("x", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:54:32) 
-- CODE:
print 
round("x", 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round("x", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
